eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-aura-api-deployment
  labels:
    app.kubernetes.io/name: aura-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aura-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aura-api
    spec:
      containers:
      - name: aura-api
        image: 906043146211.dkr.ecr.ap-southeast-1.amazonaws.com/product_aura_be:latest
        ports:
        - containerPort: 3000
