eks/ingress-es.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-es-product
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elasticsearch-product.auradental.vn
      secretName: product-elasticsearch-es-http-ca-public
  rules:
    - host: elasticsearch-product.auradental.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: product-elasticsearch-es-http
                port:
                  number: 9200
